--- a/agent-core/build.gradle
+++ b/agent-core/build.gradle
@@ -4,7 +4,7 @@ dependencies {
     testCompile "junit:junit:4.12"
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.5'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.5'
-
+    compile group: 'javassist', name: 'javassist', version: '3.12.1.GA'
 
 }
 
