--- a/agent-core/build.gradle
+++ b/agent-core/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.5'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.5'
     compile group: 'javassist', name: 'javassist', version: '3.12.1.GA'
+    compile files(org.gradle.internal.jvm.Jvm.current().toolsJar)
 
 }
 
@@ -26,3 +27,14 @@ test {
 }
 
 test.dependsOn testJar
+
+jar {
+    manifest {
+        attributes 'Manifest-Version': '1.0',
+        'Premain-Class': 'com.distrace.DistraceAgent',
+        'Main-Class': 'com.distrace.DistraceAgent',
+        'Agent-Class': 'com.distrace.DistraceAgent',
+        'Can-Redefine-Classes': 'true',
+        'Can-Retransform-Classes': 'true'
+    }
+}
