--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'distrace'
 
 include 'agent-core'
 include 'agent-h2o'
+include 'example-apps'
 
 // Prefix all projects with project name
 rootProject.children.each { it.name = rootProject.name + "-" + it.name }
