--- a/agent-core/build.gradle
+++ b/agent-core/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.internal.jvm.Jvm
+
 description = "Distrace instrumentation library"
 
 dependencies {
@@ -5,8 +7,7 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.5'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.5'
     compile group: 'javassist', name: 'javassist', version: '3.12.1.GA'
-    compile files(org.gradle.internal.jvm.Jvm.current().toolsJar)
-
+    compile files(Jvm.current().toolsJar)
 }
 
 // Add a new configuration containing only jars needed for test run
