--- a/example-apps/build.gradle
+++ b/example-apps/build.gradle
@@ -5,14 +5,13 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.5'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.5'
     compile group: 'javassist', name: 'javassist', version: '3.12.1.GA'
-    compile files(org.gradle.internal.jvm.Jvm.current().toolsJar)
 
 }
 
 // Add a new configuration containing only jars needed for test run
 configurations {
     testAssembly {
-        description = 'Contains only jars needed to run tests on top of Spark.'
+        description = 'Contains example application jars.'
         transitive = false
     }
 }
