--- a/agent-core/build.gradle
+++ b/agent-core/build.gradle
@@ -1,3 +1,6 @@
+apply plugin: 'java'
+apply plugin: 'com.github.johnrengelman.shadow'
+
 import org.gradle.internal.jvm.Jvm
 description = "Distrace instrumentation library"
 
@@ -5,45 +8,60 @@ dependencies {
     testCompile "junit:junit:4.12"
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.5'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.5'
-    compile group: 'javassist', name: 'javassist', version: '3.12.1.GA'
-    compile files(Jvm.current().toolsJar)
-}
+    compile 'net.bytebuddy:byte-buddy:1.3.5'
+    compile 'net.bytebuddy:byte-buddy-agent:1.3.5'
 
-// Add a new configuration containing only jars needed for test run
-configurations {
-    testAssembly {
-        description = 'Contains only jars needed to run tests on top of Spark.'
-        transitive = false
-    }
+    compile files(Jvm.current().toolsJar)
 }
 
 // Setup test environment
 test {
     // Run with assertions ON
     enableAssertions = true
-
     // For a new JVM for each test class
     forkEvery = 1
 }
 
+shadowJar{
+    dependencies {
+        include(project(":distrace-agent-core"))
+        include(dependency("net.bytebuddy:byte-buddy-agent:1.3.5"))
+        include(dependency("net.bytebuddy:byte-buddy:1.3.5"))
+    }
+}
+
+artifacts {
+    archives shadowJar
+}
+
+task compileC(type: Exec){
+    def JAVA_HOME = System.getenv("JAVA_HOME")
+    def compiler = "g++"
+    def compilerIncludes = ["-I$JAVA_HOME/include", "-I$JAVA_HOME/include/darwin"]
+    def sources = ['src/main/c/agent.cpp']
+    def outputFile = "build/distrace-agent-core-${version}.so"
+    def compilerOptions = ["-dynamiclib", '-o', outputFile]
+    def command = [compiler]+compilerOptions+compilerIncludes+sources
+    commandLine command
+}
 test.dependsOn testJar
 
 jar {
     manifest {
         attributes 'Manifest-Version': '1.0',
-        'Premain-Class': 'com.distrace.DistraceAgent',
-        'Main-Class': 'com.distrace.DistraceAgent',
-        'Agent-Class': 'com.distrace.DistraceAgent',
-        'Can-Redefine-Classes': 'true',
-        'Can-Retransform-Classes': 'true',
-        'Boot-Class-Path':'javassist-3.12.1.GA.jar'
+                'Premain-Class': 'com.distrace.DistraceAgent',
+                'Main-Class': 'com.distrace.DistraceAgent',
+                'Agent-Class': 'com.distrace.DistraceAgent',
+                'Can-Redefine-Classes': 'true',
+                'Can-Retransform-Classes': 'true',
+                'Boot-Class-Path':'byte-buddy-1.3.5.jar'
     }
 }
 
 task copyNecessaryLibs(type: Copy) {
     into "$buildDir/libs"
-    from configurations.compile.filter { it.toString().endsWith("javassist-3.12.1.GA.jar")}
+    from configurations.compile.filter { it.toString().endsWith("byte-buddy-1.3.5.jar")}
 }
-
+build.dependsOn compileC
 build.dependsOn(copyNecessaryLibs)
 
