Preparing build infrastructure which make use of CMake plugin

--- a/agent-h2o/build.gradle
+++ b/agent-h2o/build.gradle
@@ -1,4 +1,4 @@
-description = "Example applications used for testing the instrumentation library"
+description = "Agent build on top the agent-core designed to monitor H2O"
 
 // Setup test environment
 test {
