--- a/core-instrumenter/build.gradle
+++ b/core-instrumenter/build.gradle
@@ -1,4 +1,3 @@
-apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 import org.gradle.internal.jvm.Jvm
@@ -24,7 +23,6 @@ test {
 
 shadowJar{
     dependencies {
-        include(project(":distrace-agent-core"))
         include(dependency("net.bytebuddy:byte-buddy-agent:1.3.5"))
         include(dependency("net.bytebuddy:byte-buddy:1.3.5"))
     }
@@ -33,11 +31,6 @@ shadowJar{
 artifacts {
     archives shadowJar
 }
-
-task compileC(type: Exec){
-    // execute makec here
-}
-test.dependsOn testJar
 
 jar {
     manifest {
@@ -55,6 +48,6 @@ task copyNecessaryLibs(type: Copy) {
     into "$buildDir/libs"
     from configurations.compile.filter { it.toString().endsWith("byte-buddy-1.3.5.jar")}
 }
-build.dependsOn compileC
-build.dependsOn(copyNecessaryLibs)
+
+build.dependsOn copyNecessaryLibs
 
