Code almost prepared for nice coding

--- a/core-agent/CMakeLists.txt
+++ b/core-agent/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.4)
 project(distrace-agent-core)
 
 # set variables
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(AGENT_CORE_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../build")
+set(AGENT_CORE_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${AGENT_CORE_BUILD_DIR}")
 # load required modules
 find_package(JNI REQUIRED)
@@ -18,7 +18,7 @@ endif()
 include_directories( ${JNI_INCLUDE_DIRS} )
 
 # specify source files
-set(SOURCE_FILES src/main/cpp/agent.cpp)
+set(SOURCE_FILES src/main/cpp/AgentUtils.cpp src/main/cpp/AgentUtils.h src/main/cpp/Agent.cpp src/main/cpp/Agent.h)
 
 # create a shared library
 add_library("-${PROJECT_NAME}" SHARED ${SOURCE_FILES})
