--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'distrace'
 
 include 'core-agent'
+include 'core-agent-attacher'
 include 'core-instrumenter'
 include 'agent-h2o'
 include 'example-apps'
