--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ hs_err_pid*
 # ignore CLion priject files
 /core-agent/.idea
 
+# Native agent logs logs
+distrace_*.log
+
+
+
 # IntelliJ files
 .idea/
 *.iml
