--- a/core-instrumenter/build.gradle
+++ b/core-instrumenter/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.github.johnrengelman.shadow'
 
-import org.gradle.internal.jvm.Jvm
 description = "Distrace instrumentation library"
 
 dependencies {
@@ -9,8 +8,7 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.5'
     compile 'net.bytebuddy:byte-buddy:1.3.5'
     compile 'net.bytebuddy:byte-buddy-agent:1.3.5'
-
-    compile files(Jvm.current().toolsJar)
+    compile 'org.zeromq:jzmq:3.1.0'
 }
 
 // Setup test environment
