Iplemented connection between instrumentor JVM and native agent using nanomsg (jnanomsg on java side and nanomsgxx on c++ side)

--- a/core-agent/CMakeLists.txt
+++ b/core-agent/CMakeLists.txt
@@ -10,18 +10,21 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 # load required modules
 find_package(JNI REQUIRED) # JNI libraries
 find_package(BOOST REQUIRED) #  Boost libraries
-find_package(ZMQ REQUIRED) # ZeroMQ library
-find_package(AZMQ REQUIRED) # C++11 binding for ZeroMQ library
-# Include header only libraries in the include dir
+find_package(nanomsg REQUIRED) # nanomsg library
+find_package(nanomsgxx REQUIRED) # nanomsg binding for c++
+
 INCLUDE_DIRECTORIES("include")
 # include all necessary directories
 include_directories( ${JNI_INCLUDE_DIRS} )
 include_directories( ${Boost_INCLUDE_DIRS})
-include_directories( ${ZMQ_INCLUDE_DIRS})
-include_directories( ${AZMQ_INCLUDE_DIRS})
+include_directories( ${nanomsg_INCLUDE_DIRS})
+include_directories( ${nanomsgxx_INCLUDE_DIRS})
 
 # specify source files
 set(SOURCE_FILES src/main/cpp/AgentUtils.cpp src/main/cpp/AgentUtils.h src/main/cpp/AgentCallbacks.cpp src/main/cpp/AgentCallbacks.h src/main/cpp/Agent.cpp src/main/cpp/Agent.h src/main/cpp/Logger.cpp src/main/cpp/Logger.h src/main/cpp/Utils.cpp src/main/cpp/Utils.h)
 
+
 # create a shared library
 add_library("-${PROJECT_NAME}" SHARED ${SOURCE_FILES})
+target_link_libraries("-${PROJECT_NAME}" ${NANOMSG_LIBRARY})
+target_link_libraries("-${PROJECT_NAME}" ${NANOMSGXX_LIBRARY})
