--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,7 @@ buildscript {
     repositories {
         mavenCentral()
         jcenter()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.7.1'
@@ -48,6 +46,7 @@ configure(subprojects) { project ->
 
     repositories {
         mavenCentral()
+        maven { url "https://clojars.org/repo" }
     }
 
     if(project in javaProjects){
