[Java] Change package in the Java application [Native-Agent]Replace all prints by logging in c++ application [Native-Agent]Improve AgentUtils -> Better logging [Native-Agent]Add JavaUtils class containing helper methods such as getClassName, getClassLoaderName etc [Java] Configure ByteBuddy so the monitored JVM doesn't need it as a dependency

--- a/example-apps/build.gradle
+++ b/example-apps/build.gradle
@@ -1,4 +1,4 @@
-description = "Example applications used for testing the instrumentation library"
+description = "Example applications used for testing of the Distrace platform"
 
 // Setup test environment
 test {
