- [NativeAgent] bug fixes with arguments - change package name from com.distrace to cz.cuni.mff.d3s.distrace - [Instrumentor] create server loop which receives the requests and reply to them - [NativeAgent] create InstrumentorAPI - api which is used to communicate with the instrumentor JVM - [NativeAgent] make instrumentation working by adding instrumentor jar on system class loader search path - various other bug fixes - code style improvements - [NativeAgent][InstrumentorJVM] Add parameter which allows to specify socket address

--- a/core-instrumenter/build.gradle
+++ b/core-instrumenter/build.gradle
@@ -35,6 +35,6 @@ artifacts {
 jar {
     manifest {
         attributes 'Manifest-Version': '1.0',
-                'Main-Class': 'com.distrace.Instrumentor'
+                'Main-Class': 'cz.cuni.mff.d3s.distrace.Instrumentor'
     }
 }
