--- a/core-instrumenter/build.gradle
+++ b/core-instrumenter/build.gradle
@@ -4,8 +4,8 @@ description = "Distrace instrumentation library"
 
 dependencies {
     testCompile "junit:junit:4.12"
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.5'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.5'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.6'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.6'
     compile 'net.bytebuddy:byte-buddy:1.3.19'
     compile 'net.bytebuddy:byte-buddy-agent:1.3.19'
     compile "jnanomsg:jnanomsg:0.4.3"
@@ -25,6 +25,8 @@ shadowJar{
         include(dependency("net.bytebuddy:byte-buddy:1.3.19"))
         include(dependency("jnanomsg:jnanomsg:0.4.3"))
         include(dependency("net.java.dev.jna:jna:4.2.1"))
+        include(dependency("org.apache.logging.log4j:log4j-api:2.6"))
+        include(dependency("org.apache.logging.log4j:log4j-core:2.6"))
     }
 }
 
