--- a/examples/SingleJVMThreadTest/app/build.gradle
+++ b/examples/SingleJVMThreadTest/app/build.gradle
@@ -5,7 +5,7 @@ description = "Simple application demostrating sucesfull instrumentation"
 jar {
     manifest {
         attributes(
-                'Main-Class': 'cz.cuni.mff.d3s.distrace.examples.SimpleTest'
+                'Main-Class': 'cz.cuni.mff.d3s.distrace.examples.Main'
         )
     }
 }
