--- a/examples/SingleJVMCallbackTest/app/build.gradle
+++ b/examples/SingleJVMCallbackTest/app/build.gradle
@@ -1,4 +1,4 @@
-description = "Simple application demostrating instrumentation of threads in one JVM"
+description = "Simple application demostrating instrumentation of Callbacks in one JVM"
 
 // example application does not need to have any dependency on the instrumentation platform at all
 
