--- a/examples/SingleJVMCallbackTest/agent/build.gradle
+++ b/examples/SingleJVMCallbackTest/agent/build.gradle
@@ -5,8 +5,17 @@ description = "Instrumentation agent"
 dependencies {
     // use functionality provided by core-instrumentor
     compile project(path: ':distrace-core-instrumenter', configuration: 'shadow')
+    compile project(path: ':distrace-examples-SingleJVMCallbackTest-app', configuration: 'archives')
 }
 
 artifacts {
     archives shadowJar
+}
+
+shadowJar{
+    dependencies {
+        include(project(path: ':distrace-core-instrumenter', configuration: 'shadow'))
+        // exclude application classes from the final jar
+        exclude(project(path: ':distrace-examples-SingleJVMCallbackTest-app', configuration: 'archives'))
+    }
 }
