Replace reflections library by our custom service loader -> more efficient and transparent solution

--- a/instrumenter/build.gradle
+++ b/instrumenter/build.gradle
@@ -9,12 +9,11 @@ dependencies {
     compile 'net.bytebuddy:byte-buddy:1.5.3'
     compile 'net.bytebuddy:byte-buddy-agent:1.5.3'
     compile "jnanomsg:jnanomsg:0.4.3"
+    compile group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc2'
 
     // for deep cloning
     compile "uk.com.robust-it:cloning:1.9.3"
 
-    // for finding all interceptors
-    compile "org.reflections:reflections:0.9.10"
     compile 'com.google.guava:guava:20.0'
     compile "javassist:javassist:3.12.1.GA"
     compile "dom4j:dom4j:1.6.1"
@@ -33,7 +32,6 @@ shadowJar{
         include(dependency("dom4j:dom4j:1.6.1"))
         include(dependency("javassist:javassist:3.12.1.GA"))
         include(dependency("com.google.guava:guava:20.0"))
-        include(dependency("org.reflections:reflections:0.9.10"))
         include(dependency("org.objenesis:objenesis:2.1"))
         include(dependency("uk.com.robust-it:cloning:1.9.3"))
         include(dependency("net.bytebuddy:byte-buddy-agent:1.5.3"))
