--- a/examples/H2OSumMRTaskTest/agent/build.gradle
+++ b/examples/H2OSumMRTaskTest/agent/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile project(path: ':distrace-instrumenter', configuration: 'shadow')
     compile "ai.h2o:h2o-core:${h2oVersion}"
     compile project(":distrace-examples-H2OSumMRTaskTest-app")
+    compile group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc2'
 }
 
 artifacts {
