--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.7.1'
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
         classpath "gradle.plugin.fr.echoes.gradle.plugins:cpp-project-plugin:1.2.9"
+        classpath 'com.bmuschko:gradle-docker-plugin:3.0.4'
     }
 }
 
