--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ rootProject.name = 'distrace'
 include 'agent'
 include 'agent-attacher'
 include 'instrumenter'
-
+include 'docker'
 
 def includeAllTestProjects(File startPath) {
     startPath.eachDirRecurse {
